# proxmox-utilities

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  create-ubuntu-template.sh  create-vm.sh  dependabot.yml  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  cicd.yml  dependency-review.yml  python-ci.yml
docs/: index.md
docs/getting-started/: installation.md
docs/security/: overview.md
src/proxbox/: __init__.py  cli.py  config.py  exceptions.py  template.py  utils.py  vm.py
src/proxmox_utilities/: __init__.py  cli.py  template.py  utils.py  vm.py
tests/: __init__.py  conftest.py  test_config.py  test_template.py  test_utils.py  test_vm.py
